[package]
name = "notebook-website-tools"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wolfram-library-link = "0.2.7"

once_cell = "1.16.0"

syntect = "5.0.0"
